--- a/index.html
+++ b/index.html
@@ -93,12 +93,15 @@
 <script src="vendor/knockout/dist/knockout.debug.js"></script>
 <script src="vendor/knockout-validation/dist/knockout.validation.js"></script>
 
-<script src="src/view-models/app.js"></script>
-<script src="src/view-models/search-results.js"></script>
-<script src="src/validation-rules.js"></script>
-<script src="src/components/register-form.js"></script>
-<script src="src/components/login-form.js"></script>
-<script src="src/components/search-results.js"></script>
-<script src="src/main.js"></script>
+<script src="src/App.js"></script>
+<script src="src/Router.js"></script>
+<script src="src/ValidationRules.js"></script>
+<script src="src/Components.js"></script>
+<script src="src/Form/Register.js"></script>
+<script src="src/Form/Login.js"></script>
+<script src="src/ViewModel/Navigation.js"></script>
+<script src="src/ViewModel/LoginForm.js"></script>
+<script src="src/ViewModel/RegisterForm.js"></script>
+<script src="src/ViewModel/SearchResults.js"></script>
 </body>
 </html>
